fix bottom padding on mobile

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ body {
     position: relative;
     top: 25px;
     display: none;
+    padding-bottom: 13px;
 }
 @media screen and (max-width: 900px) {
     html {
